Added google maps drawing library

--- a/src/red.html
+++ b/src/red.html
@@ -4,6 +4,8 @@
   	<script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCU72VoGr-rUp62-w04DyBfucCdnDq1uhs&sensor=true">
     </script>
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=drawing&sensor=true">
+    </script>
 </head>
 
 <body>
